# ai-medicine

./: .gitignore  README.md  analyze_normalized_citations.py  main.py  notes.md  pyalex-test.py  pyproject.toml
pubmed_xml/: articles_1744742676_offset_0_batch_2.xml  articles_1744742688_offset_0_batch_0.xml  articles_1744742787_offset_0_batch_1.xml  search_1744740908_offset_0.xml  search_1744742633_offset_0.xml  search_1744742633_offset_35000.xml  search_1744742633_offset_5000.xml
